--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build all
         run: |
-          npx lerna bootstrap 
+          npx lerna bootstrap --force-local
           npm run build:packages
       
       - name: Compile TS
