--- a/taqueria-flextesa-manager/Dockerfile
+++ b/taqueria-flextesa-manager/Dockerfile
@@ -1,3 +1,4 @@
+# Should point to the latest stable version, so it needs to be updated as part of our release process.
 FROM oxheadalpha/flextesa:20221026
 RUN mkdir /app
 WORKDIR /app
