--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,52 +131,13 @@ jobs:
         run: |
           echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
-  gather-info-for-e2e-tests:
-    runs-on: ubuntu-latest
-    needs:
-      - build-binaries
-
-    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' }}
-
-    outputs:
-      test-chunks: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
-      test-chunk-ids: ${{ steps['set-test-chunk-ids'].outputs['test-chunk-ids'] }}
-      test-chunks-formatted: ${{ steps['format-test-chunks'].outputs['test-chunks-formatted'] }}
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
-          cache: "npm"
-
-      # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
-      - id: set-test-chunks
-        name: Set Chunks
-        run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
-
-      # This step just creates a list of numbers representing the different buckets of tests
-      - id: set-test-chunk-ids
-        name: Set Chunk IDs
-        run: echo "::set-output name=test-chunk-ids::$(echo $CHUNKS | jq -c 'to_entries | map(.key)')"
-        env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
-
-      # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
-      - id: format-test-chunks
-        name: Format Chunks
-        run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
-        env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
-
   run-tests:
-    name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
+    name: OS ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, ecad-macmini]
-        chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
         include:
         - os: ubuntu-latest
           url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
@@ -195,7 +156,6 @@ jobs:
 
     needs:
       - build-binaries
-      - gather-info-for-e2e-tests
     if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v3
@@ -225,10 +185,9 @@ jobs:
 
       - name: Run integration tests
         run: npm run test:integration -w tests
+      
       - name: Run e2e tests
-        run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
-        env:
-          CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
+        run: npm run test:e2e -w tests
 
   report-e2e-status:
     needs: run-tests
