--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,6 @@ concurrency:
   group: ${{ github.ref_name || github.ref }}
   cancel-in-progress: true
 
-env:
-  TAQ_VERSION: ${{ github.ref_name }}
-
 jobs:
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
@@ -50,6 +47,25 @@ jobs:
     - name: get tag version
       id: get-version
       uses: battila7/get-version-action@v2
+
+    - name: Setup Deno
+      uses: denoland/setup-deno@v1
+      with:
+        deno-version: "1.23.4"
+
+    - name: Build all
+      run: |
+        export PATH="$PATH:$(pwd)"
+        npx lerna bootstrap 
+        npm run build:packages 
+        npm run build:binary 
+        npm run build:docker
+
+    - name: cache node modules
+      uses: actions/cache@v3
+      with:
+        path: ./node_modules/**
+        key: cache-node-modules-${{ github.run_id }}
 
   build-binaries:
     name: Build Taqueria binaries
@@ -100,6 +116,7 @@ jobs:
         id: build-bin
         shell: bash
         env:
+          TAQ_VERSION: ${{ github.ref_name }}
           DENO_DIR: "./deno"
         run: |
           BUILD=`git rev-parse --short "$GITHUB_SHA"`
@@ -131,24 +148,69 @@ jobs:
         run: |
           echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
+  gather-info-for-e2e-tests:
+    runs-on: ubuntu-latest
+    needs:
+      - build-binaries
+
+    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' }}
+
+    outputs:
+      test-chunks: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+      test-chunk-ids: ${{ steps['set-test-chunk-ids'].outputs['test-chunk-ids'] }}
+      test-chunks-formatted: ${{ steps['format-test-chunks'].outputs['test-chunks-formatted'] }}
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
+
+      # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
+      - id: set-test-chunks
+        name: Set Chunks
+        run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
+
+      # This step just creates a list of numbers representing the different buckets of tests
+      - id: set-test-chunk-ids
+        name: Set Chunk IDs
+        run: echo "::set-output name=test-chunk-ids::$(echo $CHUNKS | jq -c 'to_entries | map(.key)')"
+        env:
+          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+
+      # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
+      - id: format-test-chunks
+        name: Format Chunks
+        run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
+        env:
+          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+
   run-tests:
-    name: OS ${{ matrix.os }}
+    name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ecad-macmini]
+        os: [ubuntu-latest, macos-latest]
+        chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
         include:
         - os: ubuntu-latest
           url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
           final-name: taq
           make-executable-cmd: chmod +x
           get-current-dir: echo "$(pwd)"
-        - os: ecad-macmini
+          cache_path: |
+            ~/.deno
+            ~/.cache/deno
+        - os: macos-latest
           url: ${{ needs.build-binaries.outputs.public-url-macos }}
           final-name: taq
           make-executable-cmd: chmod +x
           get-current-dir: echo "$(pwd)"
+          cache_path: |
+            ~/.deno
+            ~/Library/Caches/deno
 
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
@@ -156,7 +218,8 @@ jobs:
 
     needs:
       - build-binaries
-    if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
+      - gather-info-for-e2e-tests
+    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -168,26 +231,52 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - name: Add working dir to PATH
-        run: echo "$(pwd)" >> $GITHUB_PATH
-
-      - name: Build all
+      - name: setup-docker
+        if: runner.os == 'macOS'
         run: |
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          brew install docker
+          brew install colima
+          colima start
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
+
+      - name: download the binary from the build-binaries job and make it executable
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        run: |
+          curl --url ${{ matrix.url }} -o ${{ matrix.final-name }} -L
+          ${{ matrix.make-executable-cmd }} ${{ matrix.final-name }}
+          ${{ matrix.get-current-dir }} >> $GITHUB_PATH
+
+      - name: build binary and make executable
+        if: ${{ github.event.pull_request.head.repo.fork }}
+        env:
+          TAQ_VERSION: ${{ github.ref_name }}
+          DENO_DIR: "./deno"
+        run: |
+          COMMIT=`git rev-parse --short "$GITHUB_SHA"`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
-          npx lerna bootstrap 
-          npm run build:packages 
-          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          npm run build:docker
+          deno compile --output taq --target $DENO_TARGET --allow-run --allow-write --allow-read --allow-env --allow-net index.ts --setBuild "$COMMIT" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+          [[ $(./taq init -p ./test_project) == "Project taq'ified!" ]]
+          chmod +x taq
+          echo "$(pwd)" >> $GITHUB_PATH
+
+      - name: Build docker image
+        run: npm run build-docker --workspaces --if-present
 
       - name: Run unit tests
         run: npm run test:unit -w tests
 
       - name: Run integration tests
         run: npm run test:integration -w tests
-      
+
       - name: Run e2e tests
-        run: npm run test:e2e -w tests
+        run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
+        env:
+          CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
 
   report-e2e-status:
     needs: run-tests
@@ -226,22 +315,11 @@ jobs:
           node-version: lts/gallium
           cache: "npm"
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
-          deno-version: "1.23.4"
-
-      - name: Add working dir to PATH
-        run: echo "$(pwd)" >> $GITHUB_PATH
-
-      - name: Build all
-        run: |
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
-          TAQ_VERSION="${TAQ_VERSION/\//-}"
-          npx lerna bootstrap 
-          npm run build:packages 
-          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          npm run build:docker
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
 
       - name: Publish for PR
         if:  ${{ github.event_name == 'pull_request' }}
