Add good comments for generated storage and parameter files

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,6 @@ website/docs/glossary.md
 website/yarn.lock
 taqueria-plugin-metadata/index.js
 taqueria-plugin-metadata/index.js.map
+
+# Temp taq projects created from e2e test execution
+tests/e2e/auto-test-*
