--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.24.1",
+	"version": "0.23.24-rc",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -36,8 +36,8 @@
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.24.1",
-		"@taqueria/protocol": "^0.24.1",
+		"@taqueria/node-sdk": "^0.23.24-rc",
+		"@taqueria/protocol": "^0.23.24-rc",
 		"async-retry": "^1.3.3",
 		"fast-glob": "^3.2.11",
 		"portfinder": "^1.0.28"
