Replace tezos icon with Michelson one

--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -624,8 +624,8 @@
 					".tz"
 				],
 				"icon": {
-					"light": "syntaxes/michelson/black-logo.png",
-					"dark": "syntaxes/michelson/white-logo.png"
+					"light": "syntaxes/michelson/logo.png",
+					"dark": "syntaxes/michelson/logo.png"
 				},
 				"configuration": "./syntaxes/michelson/configuration.json"
 			},
