Added test to assure that zod schema validation errors were formatted in a nicer error message

--- a/taqueria-protocol-types/package.json
+++ b/taqueria-protocol-types/package.json
@@ -56,6 +56,7 @@
 		"fluture": "^14.0.0",
 		"rambda": "^7.2.1",
 		"rambdax": "^8.1.0",
+		"ts-pattern": "^4.0.6",
 		"tsup": "^6.2.3",
 		"zod": "^3.17.3"
 	},
