--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -62,9 +62,11 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
+      - name: Build types
+        run: npm run build-types
+
       - name: Build package
-        run: |
-          npm run build-types 
+        run: | 
           npm run build -w taqueria-sdk
           npm run build -w taqueria-protocol
           npm run build -w taqueria-flextesa-manager
