--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -67,8 +67,9 @@ jobs:
 
       - name: Build package
         run: | 
-          npm run build -w taqueria-sdk
+          npm run build -w taqueria-protocol-types
           npm run build -w taqueria-protocol
+          npm run build -w taqueria-sdk
           npm run build -w taqueria-flextesa-manager
 
       - name: Set up QEMU
