Use bash bin/build.sh instead of dot slash bin/build.sh so that it works on Windows in CICD

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 	"scripts": {
 		"test": "yarn",
 		"bootstrap": "lerna bootstrap --force-local",
-		"build-all": "./bin/build-all.sh",
-		"build:binary": "./bin/build.sh",
+		"build-all": "bash bin/build-all.sh",
+		"build:binary": "bash bin/build.sh",
 		"build:docker": "lerna run build-docker",
 		"build:packages": "lerna run build",
 		"deploy": "lerna version --no-push --no-git-tag-version --no-private",
