--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ concurrency:
   group: ${{ github.ref_name || github.ref }}
   cancel-in-progress: true
 
+env:
+  TAQ_VERSION: ${{ github.ref_name }}
+
 jobs:
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
@@ -86,12 +89,6 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
-          cache: "npm"
-
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
@@ -105,7 +102,9 @@ jobs:
         env:
           DENO_DIR: "./deno"
         run: |
-          npm run build:binary
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          TAQ_VERSION="${TAQ_VERSION/\//-}"
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt --target $DENO_TARGET index.ts --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           ./"${{ matrix.taqueria_bin }}" init -p ./test_project
           if [ ! -f ./test_project/.taq/config.json ]; then
             echo "Project not initialized"
@@ -213,11 +212,12 @@ jobs:
         run: echo "$(pwd)" >> $GITHUB_PATH
 
       - name: Build all
-        shell: bash
         run: |
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          TAQ_VERSION="${TAQ_VERSION/\//-}"
           npx lerna bootstrap 
           npm run build:packages 
-          npm run build:binary
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           npm run build:docker
 
       - name: Run unit tests
@@ -276,11 +276,12 @@ jobs:
         run: echo "$(pwd)" >> $GITHUB_PATH
 
       - name: Build all
-        shell: bash
         run: |
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          TAQ_VERSION="${TAQ_VERSION/\//-}"
           npx lerna bootstrap 
           npm run build:packages 
-          npm run build:binary
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           npm run build:docker
 
       - name: Publish for PR
