--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -29,6 +29,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
+		"ts-to-zod": "^1.13.1",
 		"typescript": "^4.7.2"
 	},
 	"exports": {
