Updated parcel, which has the latest version of lmdb as a dependency, which is supposed to help with the node-gyp issues. Also added step to the workflow when building binaries to delete the node-gyp cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,6 +94,11 @@ jobs:
         with:
           deno-version: "1.23.4"
 
+      - name: Delete node-gyp cache
+        id: delete-node-gyp-cache
+        run: rm -rf %LocalAppData%/node-gyp/Cache
+        if: ${{ matrix.os_short == "windows" }}
+
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
       - name: Build the binary for ${{ matrix.os }}
@@ -104,6 +109,7 @@ jobs:
         run: |
           BUILD=`git rev-parse --short "$GITHUB_SHA"`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
+
           npm ci
           npm run build-types
           npm run build -w taqueria-protocol-types
