--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -41,7 +41,7 @@
 	},
 	"devDependencies": {
 		"@types/node-fetch": "^2.6.1",
-		"parcel": "2.6.1",
+		"parcel": "^2.8.0",
 		"typescript": "4.7.2"
 	}
 }
