--- a/taqueria-plugin-smartpy/package.json
+++ b/taqueria-plugin-smartpy/package.json
@@ -45,7 +45,7 @@
 		"fast-glob": "^3.2.11"
 	},
 	"devDependencies": {
-		"parcel": "2.6.1",
+		"parcel": "^2.8.0",
 		"typescript": "^4.7.2"
 	}
 }
