--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Delete node-gyp cache
         id: delete-node-gyp-cache
         run: rm -rf %LocalAppData%/node-gyp/Cache
-        if: ${{ matrix.os_short == "windows" }}
+        if: ${{ matrix.os_short == 'windows' }}
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
