Don't try to remove node-gyp cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,10 +94,10 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - name: Delete node-gyp cache
-        id: delete-node-gyp-cache
-        run: Remove-Item -Recurse -Force %LocalAppData%/node-gyp/Cache
-        if: ${{ matrix.os_short == 'windows' }}
+      # - name: Delete node-gyp cache
+      #   id: delete-node-gyp-cache
+      #   run: Remove-Item -Recurse -Force %LocalAppData%/node-gyp/Cache
+      #   if: ${{ matrix.os_short == 'windows' }}
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
