--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -39,11 +39,4 @@ jobs:
           echo "Debug env variable TAQUERIA_BRANCH_INLINE: ${TAQUERIA_BRANCH_INLINE}"
           echo "Debug env variable TAQUERIA_COMMIT_INLINE: ${TAQUERIA_COMMIT_INLINE}"
 
-          ls
-
-          ls bin
-
-          source ./bin/set-vars.sh
-
-          echo "Debug env variable BRANCH_VAR_FILE: ${TAQUERIA_BRANCH}"
-          echo "Debug env variable COMMIT_VAR_FILE: ${TAQUERIA_COMMIT}"
+          npm run build:docker:debug
