--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -30,6 +30,10 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: '1.23.4'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+          cache: "npm"
       - name: DEBUG
         shell: bash
         run: |
@@ -39,4 +43,13 @@ jobs:
           echo "Debug env variable TAQUERIA_BRANCH_INLINE: ${TAQUERIA_BRANCH_INLINE}"
           echo "Debug env variable TAQUERIA_COMMIT_INLINE: ${TAQUERIA_COMMIT_INLINE}"
 
+          npm run build:docker:debug
+
+      - name: Build all
+        run: |
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          TAQ_VERSION="$(git rev-parse --abbrev-ref HEAD)"
+          npx lerna bootstrap 
+          npm run build:packages 
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           npm run build:docker:debug
