Workflow change test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,6 @@ env:
   TAQ_VERSION: ${{ github.ref_name }}
 
 jobs:
-  ssh:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
   workflow-setup:
@@ -220,7 +213,7 @@ jobs:
 
       - name: Build all
         run: |
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          BUILD=`git rev-parse --short HEAD`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
           npx lerna bootstrap 
           npm run build:packages 
