--- a/taqueria-flextesa-manager/package.json
+++ b/taqueria-flextesa-manager/package.json
@@ -6,7 +6,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build-package": "npx tsc -noEmit && npx esbuild --platform=node --bundle index.ts --outdir=.",
-		"build-docker": "npm config set script-shell $(which bash); source ../bin/set-vars.sh; docker build . -t \"ghcr.io/ecadlabs/taqueria-flextesa:${TAQ_VERSION}-${BUILD}\"",
+		"build-docker": "npm config set script-shell $(which bash); source ../bin/set-vars.sh; echo \"In place 3: $TAQ_VERSION and $BUILD\"; docker build . -t \"ghcr.io/ecadlabs/taqueria-flextesa:${TAQ_VERSION}-${BUILD}\"",
 		"build": "npm run build-package",
 		"build-all": "npm run build-package && npm run build-docker"
 	},
