--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc --emitDeclarationOnly -p ./tsconfig.json && npx tsup"
+		"build": "npx tsc --emitDeclarationOnly -p ./tsconfig.json && npx tsup",
+		"build-types": "npx ts-to-zod types.ts out/types-zod.ts && npx ts-node scripts/post-ts-to-zod.ts && npx ts-node scripts/build-types.ts"
 	},
 	"keywords": [
 		"taqueria",
@@ -30,9 +31,11 @@
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
 		"ts-to-zod": "^1.13.1",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"tsup": "^6.2.3"
 	},
 	"exports": {
+		".": "./index.js",
 		"./*": {
 			"import": "./*.mjs",
 			"default": "./*.js"
@@ -40,21 +43,29 @@
 		"./*.js": {
 			"import": "./*.mjs",
 			"default": "./*.js"
+		},
+		"./out/**/*": {
+			"import": "./*.mjs",
+			"default": "./*.js"
+		},
+		"./out/examples/*": {
+			"import": "./*.mjs",
+			"default": "./*.js"
 		}
 	},
 	"dependencies": {
 		"@peculiar/webcrypto": "^1.4.0",
-		"@taqueria/protocol-types": "^0.24.1",
 		"batching-toposort": "^1.2.0",
 		"fluture": "^14.0.0",
 		"rambda": "^7.2.1",
 		"rambdax": "^8.1.0",
-		"tsup": "^6.2.3",
 		"zod": "^3.17.3"
 	},
 	"tsup": {
 		"entry": [
-			"[!.]+.ts"
+			"types.ts",
+			"out/types/*.ts",
+			"out/*.ts"
 		],
 		"sourcemap": true,
 		"target": "node16",
