--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,12 @@ env:
   TAQ_VERSION: ${{ github.ref_name }}
 
 jobs:
+  ssh:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
   workflow-setup:
@@ -213,17 +219,12 @@ jobs:
 
       - name: Build all
         run: |
-          git rev-parse --short "$GITHUB_SHA"
           BUILD=`git rev-parse --short "$GITHUB_SHA"`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
-          echo build=${BUILD}
-          echo taq_version=${TAQ_VERSION}
           npx lerna bootstrap 
           npm run build:packages 
           deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           npm run build:docker
-          echo build=${BUILD}
-          echo taq_version=${TAQ_VERSION}
 
       - name: Run unit tests
         run: npm run test:unit -w tests
