specify file extension

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -300,7 +300,7 @@ jobs:
       - workflow-setup
       - publish-npm-packages
     if: ${{ !github.event.pull_request.head.repo.fork }}
-    uses: ./.github/workflows/vscode-extension
+    uses: ./.github/workflows/vscode-extension.yml
     with:
       prerelease: ${{ needs.workflow-setup.outputs.prerelease }}
     secrets:
