Improve output when checking Dependencies, Remove dependency of tests step on build-binaries (#1557)
* Improve build script: checking docker

* Changes to Build Process

* Read version from github var

* clean-up

* remove dependency of tests on build-binary

* Exit on errors after the try-catch

* fix local GH reusable action

* specify file extension

Co-authored-by: Daniele Lisi <22307776+danielelisi@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
     needs:
-      - build-binaries
+      - workflow-setup
 
     if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' }}
 
@@ -189,7 +189,6 @@ jobs:
       SCAFFOLDING_PAT: ${{ secrets.SCAFFOLDING_PAT }}
 
     needs:
-      - build-binaries
       - gather-info-for-e2e-tests
     if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
@@ -260,11 +259,6 @@ jobs:
           scope: "${{ env.SCOPE }}"
           node-version: lts/gallium
           cache: "npm"
-
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.23.4"
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
