Gracefully return without error if the Sandbox item has been refreshed

--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -624,7 +624,7 @@
 				},
 				{
 					"command": "taqueria.refresh_sandbox_data",
-					"when": "view == taqueria-sandboxes",
+					"when": "false",
 					"group": "inline"
 				},
 				{
