Add npm run build-types to publish-marketplace job

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -125,6 +125,7 @@ jobs:
 
       - name: Build all
         run: |
+          npm run build-types
           npm run build:packages
       
       - name: Compile TS
