--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -23,7 +23,7 @@
 	"types": "./index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build-plugin": "npx tsc -noEmit && npx parcel build --no-cache  2>&1",
+		"build-plugin": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"build-dev": "npm run build-docker && npm run build-plugin",
 		"build": "npm run build-plugin",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
@@ -44,7 +44,23 @@
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.4",
-		"parcel": "^2.8.0",
+		"tsup": "^6.1.3",
 		"typescript": "^4.7.2"
+	},
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
