--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -22,7 +22,7 @@
 		}
 	},
 	"scripts": {
-		"build": "npx tsc -noEmit -p ./tsconfig.json && npx parcel build --no-cache 2>&1"
+		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
 	},
 	"author": "ECAD Labs",
 	"license": "Apache-2.0",
@@ -41,7 +41,23 @@
 	},
 	"devDependencies": {
 		"@types/node-fetch": "^2.6.1",
-		"parcel": "^2.8.0",
+		"tsup": "^6.1.3",
 		"typescript": "4.7.2"
+	},
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
