--- a/taqueria-plugin-tezos-client/package.json
+++ b/taqueria-plugin-tezos-client/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc -noEmit && npx parcel build --no-cache 2>&1",
+		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
 	},
 	"keywords": [
@@ -45,7 +45,23 @@
 		"fast-glob": "^3.2.7"
 	},
 	"devDependencies": {
-		"parcel": "^2.8.0",
-		"typescript": "4.7.2"
+		"tsup": "^6.1.3",
+		"typescript": "^4.7.2"
+	},
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
