--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -59,7 +59,8 @@
 		"fluture": "^14.0.0",
 		"rambda": "^7.2.1",
 		"rambdax": "^8.1.0",
-		"zod": "^3.17.3"
+		"zod": "^3.17.3",
+		"i18next": "^21.8.4"
 	},
 	"tsup": {
 		"entry": [
