--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,8 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ~/${{ env.DENO_DIR }}
+          path: |
+            ~/${{ env.DENO_DIR }}
           key: ${{ runner.os }}-deno-${{ hashFiles('deno-lock.json') }}
 
       - name: Setup Deno
@@ -213,7 +214,8 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ~/${{ env.DENO_DIR }}
+          path: |
+            ~/${{ env.DENO_DIR }}
           key: ${{ runner.os }}-deno-${{ hashFiles('deno-lock.json') }}
 
       - uses: actions/setup-node@v3
